--- a/app/Views/css/style-game.css
+++ b/app/Views/css/style-game.css
@@ -37,7 +37,7 @@ header {
     height: 380px;
     width: 100%;
     position: relative;
-    background-image: url(img/game/bg-view.png);
+    background-image: url(../views/img/game/bg-view.png);
     background-repeat: repeat-x;
     animation: view 5s linear infinite;
     animation-play-state: paused;
@@ -57,7 +57,7 @@ header {
 #char {
     height: 150px;
     width: 150px;
-    background-image: url(img/game/char.png);
+    background-image: url(../views/img/game/char.png);
     position: relative;
     left: 50px;
     top: 60px;
@@ -86,7 +86,7 @@ header {
 #control {
     height: 100px;
     width: 100%;
-    background-image: url(img/game/bg-control.png);
+    background-image: url(../views/img/game/bg-control.png);
     display: flex;    
     align-items: center;
 }
@@ -94,7 +94,7 @@ header {
 #start {
     height: 70px;
     width: 145px;
-    background-image: url(img/game/start.png);
+    background-image: url(../views/img/game/start.png);
     cursor: pointer;
     color: #f5f5f5;
     display: flex;
@@ -132,7 +132,7 @@ header {
 #button1 {
     height: 70px;
     width: 70px;
-    background-image: url(img/game/button1.png);
+    background-image: url(../views/img/game/button1.png);
     cursor: pointer;
     position: relative;
     top: 70px;
@@ -141,7 +141,7 @@ header {
 #button2 {
     height: 70px;
     width: 70px;
-    background-image: url(img/game/button2.png);
+    background-image: url(../views/img/game/button2.png);
     cursor: pointer;
     position: relative;
     left: 5px;
