--- a/app/Views/css/style-game.css
+++ b/app/Views/css/style-game.css
@@ -156,15 +156,16 @@ header {
 .aside {
     grid-area: aside;
     padding: 20px;
+    height: fit-content;
     background-color: white;
     border-radius: 20px;
     margin-right: 100px;
 }
 
 #leaderboard {
-    width: 50px;
-    height: 50px;
-    background-color: #ee353b;
+    margin: 20px auto;
+    height: 380px;
+    overflow-y: scroll;
 }
 
 footer {
